Fixing content variable

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Yannick Villatoro / Resume
-description: [A short description of your site's purpose]
+description: Coding as a lifestyle.
