--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Yannick Villatoro / Resume
+title: Yannick Alexander Villatoro
 description: Coding as a lifestyle.
