Adding default styling

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Yannick Alexander Villatoro
-description: Coding as a lifestyle.
+description: Front-End Web Dev / Web Designer
