--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Yannick Alexander Villatoro
-description: Front-End Web Developer / Web Designer
+description: Front-End Web Developer / Designer
